--- a/package.json
+++ b/package.json
@@ -6,12 +6,22 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "apidoc": "^1.2.0",
+    "body-parser": "^1.20.2",
+    "busboy": "^1.6.0",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.17.3",
+    "image-type": "^5.2.0",
     "mongoose": "^8.0.1",
     "morgan": "~1.9.1",
+    "nodemon": "^3.0.1",
     "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1"
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6"
   }
 }
