--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
     "busboy": "^1.6.0",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "~1.4.4",
+    "crypto-js": "^4.2.0",
     "debug": "~2.6.9",
+    "dotenv": "^16.3.1",
     "express": "~4.16.1",
+    "express-jwt": "^8.4.1",
     "express-session": "^1.17.3",
     "image-type": "^5.2.0",
-    "mongoose": "^8.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.4.4",
+    "mongoose": "^7.6.5",
+    "mongoose-unique-validator": "^4.0.0",
     "morgan": "~1.9.1",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
